# autobot_dev

./: .env.example  .gitignore  AutoBot_Ref_v5.txt  Autobot_v6.md  README.md  SETUP.md  docker-compose.yml  requirements.txt
autobot-vscode/: README.md  package-lock.json  package.json
autobot_langgraph/: .env.example  app.py  requirements.txt
autobot_vscode/: .vscodeignore  README.md  package-lock.json  package.json
code_pipeline/: deploy.sh  run_local.sh
docs/: autobot_agentic_plan.md  autobot_deployment_plan.md  autobot_v8.md  critic_training_loop_guide.md  graphrag_entity_usage.md  neo4j_graphrag_guide.md  (+1 more)
etl/: .env.example  (+9 more)
slackbot/: .dockerignore  298_BottleneckTrain.ipynb  Dockerfile  Dockerfile.mcp  README.md  RLHF_PIPELINE.md  adhoc.py  app.py  bottleneck_issue_to_msg.py  cache.py  cloudbuild.mcp.yaml  config.py  dpo_feedback.py  dpo_weekly.py  full_extract.py  langgraph.json  mcp_server.py  notifier.py  poller.py  pyproject.toml  reasoner.py  scorer_training.ipynb  seen_issues.db  sentinel.py  slack_orchestrator.py  test_mcp_logic.py  test_snowflake.py
slackbot/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
slackbot/schema/: dpo_tables.sql
slackbot/scripts/: run_weekly_dpo.py
slackbot/vscode-autobot/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
slackbot/vscode-autobot/src/: config.ts  deepLink.ts  extension.ts  githubRest.ts  inferenceClient.ts  orchestrator.ts  parsers.ts  patchTreeProvider.ts  repoIndex.ts  session.ts  types.ts
(+135 files in other folders)
